--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -20,7 +20,7 @@
         android:text="Add"
         android:id="@+id/button"
         android:layout_below="@+id/textView"
-        android:background="@drawable/button"
+        android:background="@drawable/addContactButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -30,7 +30,7 @@
         android:text="Add"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
-        android:background="@drawable/button"
+        android:background="@drawable/addContactButton"
         android:layout_alignLeft="@+id/button"
         android:layout_alignStart="@+id/button"
         android:layout_alignRight="@+id/button"
@@ -42,7 +42,7 @@
         android:text="Add"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
-        android:background="@drawable/button"
+        android:background="@drawable/addContactButton"
         android:layout_alignLeft="@+id/button2"
         android:layout_alignStart="@+id/button2"
         android:layout_alignRight="@+id/button2"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:text="Add"
         android:id="@+id/button4"
-        android:background="@drawable/button"
+        android:background="@drawable/addContactButton"
         android:layout_below="@+id/button3"
         android:layout_alignLeft="@+id/button3"
         android:layout_alignStart="@+id/button3"
