--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,16 @@
                 android:src="@drawable/addcontact"
                 android:background="@null" />
 
+            <SearchView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addressSearchView"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:iconifiedByDefault="false"
+                />
+            <!--android:layout_centerHorizontal="true" -->
+
         </RelativeLayout>
 
 
